Complete basic command history interface

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,11 +6,12 @@
 
 NAME = libft.a
 CC = gcc
-CFLAGS = -Wall -Werror -Wextra -g -fsanitize=address
+CFLAGS = -Wall -Werror -Wextra #-g -fsanitize=address
 INC = -I inc
 SRC_DIR = src
 SRC = \
 	atoi\
+	getopt\
 	itoa\
 	memalloc\
 	memccpy\
