--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = deps/libft
 	url = https://github.com/suedadam/42sh
 	branch = libft
-[submodule "malloc"]
+[submodule "local_malloc"]
 	path = deps/malloc
-	url = https://github.com/suedadam/ft_malloc
-	branch = master
+	url = https://github.com/suedadam/42sh
+	branch = malloc
